<resources>
    <string name="app_name">eye Cup</string>

    <!-- Strings related to login -->
    <string name="prompt_part_id">Participant ID</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Participant Id Not Found</string>
    <string name="invalid_password">Password incorrect.  Please try again</string>
    <string name="login_failed">"Login failed"</string>
    <string name="invalid_admin_password">Password incorrect.  Please try again</string>

    <string name="str_btn_next">Next</string>
    <string name="str_btn_accept">Accept</string>
    <string name="str_btn_reject">Reject</string>
    <string name="str_btn_continue">Continue</string>

    <string name="str_txt_left">Left</string>
    <string name="str_txt_right">Right</string>

    <string name="str_txt_left_eye">Left Eye</string>
    <string name="str_txt_right_eye">Right Eye</string>

    <string name="picture">Press to take picture. Picture will be taken after 10 seconds.</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device does not support Camera2 API.</string>
    <string name="review_pic">Reject to take the picture again, or Accept to continue..</string>

    <string name="admin_title">Participant Data</string>
    <string name="admin_year_prompt">Study Year (YY)</string>
    <string name="admin_dept_prompt">Dept Num</string>
    <string name="admin_location_prompt">Location Num</string>
    <string name="admin_study_prompt">Study Num</string>
    <string name="admin_patient_id_prompt">Participant Num</string>
    <string name="admin_password_prompt">Password</string>
    <string name="admin_password_confirm_prompt">Confirm</string>
    <string name="admin_new_part">New Participant</string>
    <string name="admin_create_part">Create Participant</string>
    <string name="admin_btn_save_pat">Save Participant</string>
    <string name="admin_btn_cam_set">Camera Settings</string>
    <string name="admin_btn_save_pat_pw">Save Participant</string>

    <string name="admin_dvc_prompt">Device ID</string>
    <string name="admin_btn_save_dvc">Save Device</string>

    <string name="admin_camera_title">Camera Settings</string>
    <string name="admin_camera_delay_prompt">Delay (s)</string>
    <string name="admin_camera_focus_prompt">Focus (cm)</string>
    <string name="admin_camera_aperture_prompt">Aperture</string>
    <string name="admin_camera_shutter_prompt">Shutter Factor</string>
    <string name="admin_camera_sens_prompt">Sensitivity</string>
    <string name="admin_camera_frame_prompt">Frame Dur. (ms)</string>
    <string name="admin_camera_cropW_prompt">Crop Fact. (W)</string>
    <string name="admin_camera_cropH_prompt">Crop Fact. (H)</string>
    <string name="admin_camera_zoomD_prompt">Digital Zoom</string>
    <string name="admin_camera_zoomO_prompt">Optical Zoom</string>
    <string name="admin_camera_wbTemp_prompt">White Balance Temp</string>
    <string name="admin_btn_save_cam">Save Settings</string>

    <string name="main_title">Welcome</string>
    <string name="main_inst">Welcome</string>
    <string name="title_activity_admin_camera">AdminCameraActivity</string>

</resources>
