<?xml version="1.0" encoding="utf-8"?><!--
 Copyright 2014 The Android Open Source Project

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/layoutM"
        android:background="@color/grey"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true" >

        <LinearLayout
            android:id="@+id/layoutAccRej"
            android:background="@color/grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/layoutAccRejBtns"
                android:background="@color/grey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="bottom"
                android:visibility="visible"
                >

                <Button
                    android:id="@+id/btn_reject"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="25sp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/col_btn_reject"
                    android:text="@string/str_btn_reject" />

                <Button
                    android:id="@+id/btn_accept"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="25sp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/col_btn_accept"
                    android:text="@string/str_btn_accept" />

            </LinearLayout>
            <TextView
                android:id="@+id/lblInstruct"
                android:background="@color/col_black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/col_white"
                android:layout_marginBottom="5dp"
                android:text="@string/review_pic"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutTakePic"
            android:background="@color/grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btnPicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:textSize="25sp"
                android:background="@xml/back"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/col_white"
                android:text="@string/picture" />

            <TextView
                android:id="@+id/txtInstruction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:text="Medium Text"
                android:textColor="@color/clrInstructions"
                android:textSize="25sp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutPreview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            >

            <com.ora.android.eyecup.AutoFitTextureView
                android:id="@+id/texture"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutReview"
            android:layout_width="match_parent"
            android:layout_height="619dp"
            android:layout_gravity="center"
            android:orientation="vertical"

            >

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:cropToPadding="true"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:adjustViewBounds="true"
                />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
