<?xml version="1.0" encoding="utf-8"?>
<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AdminActivity">

    <LinearLayout
        android:id="@+id/layoutTitle"
        android:background="@color/light_grey"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true" >

        <LinearLayout
            android:id="@+id/layoutTitleSub"
            android:background="@color/light_grey"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtInstruction"
                android:text="@string/admin_title"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/clrInstructions"
                android:textSize="25sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutParticipant"
            android:background="@color/light_grey"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/layoutPat1Data"
                android:background="@color/light_grey"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

            <EditText
                android:id="@+id/tbxSPNYearId"
                android:ems="10"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/clrInstructions"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <EditText
                android:id="@+id/tbxSPNDeptId"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/clrInstructions"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                app:layout_constraintBottom_toBottomOf="parent"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutPat1Lbl"
                android:background="@color/light_grey"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/lblYearId"
                    android:text="@string/admin_year_prompt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/clrInstructions"
                    android:textSize="20sp"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    app:layout_constraintBottom_toTopOf="parent"/>
                <TextView
                    android:id="@+id/lblDeptId"
                    android:text="@string/admin_dept_prompt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/clrInstructions"
                    android:textSize="20sp"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    app:layout_constraintBottom_toTopOf="parent"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutPat2Data"
                android:background="@color/light_grey"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/tbxSPNStudyId"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/clrInstructions"
                    android:textSize="25sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:ems="10"
                    app:layout_constraintBottom_toBottomOf="parent" />
                <EditText
                    android:id="@+id/tbxSPNLocId"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/clrInstructions"
                    android:textSize="25sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:ems="10"
                    app:layout_constraintBottom_toBottomOf="parent" />
                <EditText
                    android:id="@+id/tbxPatNumber"
                    android:inputType="number"
                    android:ems="10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/clrInstructions"
                    android:textSize="25sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutPat2Lbl"
                android:background="@color/light_grey"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/lblStudyId"
                    android:text="@string/admin_study_prompt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/clrInstructions"
                    android:textSize="20sp"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    app:layout_constraintBottom_toTopOf="parent"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
                <TextView
                    android:id="@+id/lblLocation"
                    android:text="@string/admin_location_prompt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/clrInstructions"
                    android:textSize="20sp"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    app:layout_constraintBottom_toTopOf="parent"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
                <TextView
                    android:id="@+id/lblPatient"
                    android:text="@string/admin_patient_id_prompt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/clrInstructions"
                    android:textSize="20sp"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    app:layout_constraintBottom_toTopOf="parent"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutPatNum"
                android:background="@color/light_grey"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lblSPN"
                    android:text="@string/admin_patient_id_prompt"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/colorOraDark"
                    android:textSize="25sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutPat3Data"
                android:background="@color/light_grey"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/lblPassword"
                    android:text="@string/admin_password_prompt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:textColor="@color/clrInstructions"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    app:layout_constraintBottom_toBottomOf="parent" />
                <EditText
                    android:id="@+id/tbxPassword"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:textColor="@color/clrInstructions"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutDevice"
                android:background="@color/light_grey"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/lblPassword2"
                    android:text="@string/admin_password_confirm_prompt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:textColor="@color/clrInstructions"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    app:layout_constraintBottom_toBottomOf="parent" />
                <EditText
                    android:id="@+id/tbxPasswordConfirm"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:textColor="@color/clrInstructions"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutPat4Data"
                android:background="@color/light_grey"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/lblDeviceId"
                    android:text="@string/admin_dvc_prompt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:textColor="@color/clrInstructions"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    app:layout_constraintBottom_toBottomOf="parent" />
                <EditText
                    android:id="@+id/tbxDeviceId"
                    android:inputType="textPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:textColor="@color/clrInstructions"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutBottom"
                android:background="@color/light_grey"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/clrInstructions"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textSize="25sp"
                    android:layout_margin="10dp"
                    android:background="@xml/back"
                    android:onClick="OnClick"
                    android:text="@string/admin_btn_save_pat"/>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
<!--</androidx.constraintlayout.widget.ConstraintLayout>-->